kustomize/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-poc
  namespace: flux-poc
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
