kustomize/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: flux-poc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
